--- a/stacks/rsa/docker-compose.yml
+++ b/stacks/rsa/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   quimera_securonix_orchestrator:
-    image: registry.ish.com.br/quimera_orchestrator:latest
+    image: registry.ish.com.br/quimera_orchestrator:5.0.0
     # env_file:
     #   - stack.env
     ports:
